--- a/public/index.html
+++ b/public/index.html
@@ -283,6 +283,94 @@
                     </div>
                 </div>
             </section>
+            <section>
+                <div class="propertyForm">
+                    <div class="propertyFormHeaderNote">
+                        <p>Your property with us and be Confident that Your Room will be Filled Out!</p>
+                    </div>
+                    <div class="formHome">
+                        <p>Add A New Property</p>
+                        <div class="fillForm">
+                            <form action="./index.html">
+                                <div class="ulOne">
+                                    <ul>
+                                        <li>
+                                            <label for="name">Name&nbsp;</nbsp><span>*</span></label><br>
+                                            <input type="text" name="name" id="name" placeholder="Enter Name">
+                                        </li>
+                                        <li>
+                                            <label for="address">Address&nbsp;<span>*</span></label><br>
+                                            <input type="text" name="address" id="address" placeholder="Enter Address">
+                                        </li>
+                                        <li>
+                                            <label for="unit">Unit Number&nbsp;<span>*</span></label><br>
+                                            <input type="number" name="unit" id="unit" placeholder="Enter Unit">
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="ulTwo">
+                                    <ul>
+                                        <li>
+                                            <label for="city">City&nbsp;</nbsp><span>*</span></label><br>
+                                            <select name="city" id="city">
+                                                <option value=""></option>
+                                                <option value="surulere">Surulere</option>
+                                            </select>
+                                        </li>
+                                        <li>
+                                            <label for="state">State&nbsp;<span>*</span></label><br>
+                                            <select name="state" id="state">
+                                                <option value=""></option>
+                                                <option value="Lagos">Lagos</option>
+                                            </select>
+                                        </li>
+                                        <li>
+                                            <label for="room">Room Type&nbsp;<span>*</span></label><br>
+                                            <select name="room" id="room">
+                                                <option value=""></option>
+                                                <option value="deluxe">Deluxe</option>
+                                            </select>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="ulThree">
+                                    <ul>
+                                        <li>
+                                            <label for="price">Price&nbsp;</nbsp><span>*</span></label><br>
+                                            <input type="number" name="price" id="price" placeholder="Price">
+                                        </li>
+                                        <li>
+                                            <label for="room">Room Type&nbsp;<span>*</span></label><br>
+                                            <select name="room" id="room">
+                                                <option value=""></option>
+                                                <option value="deluxe">Deluxe</option>
+                                            </select>
+                                        </li>
+                                        <li></li>
+                                    </ul>
+                                </div>
+                                <div class="descriptionNote">
+                                    <label for="textarea">Description&nbsp;</nbsp><span>*</span></label>
+                                    <textarea name="textarea" id="textarea" cols="100%" rows="10" placeholder="Enter Description"></textarea>
+                                </div>
+                                <div class="uploadImage">
+                                    <p>Upload Photos&nbsp;</nbsp><span>*</span></p>
+                                    <div class="imageFile">
+                                        <label for="image" class="drop-container">
+                                            <span class="drop-title">Drag your images here, or <span>browse</span></span>
+                                            <input type="file" name="image" id="image" accept=".jpg, .png, .jpeg">
+                                            <p>supported JPG, JPEG, PNG</p>
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="submitBtn">
+                                    <button type="submit">Add New Property</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </article>
     </main>
     <script src="./asset/js/index.js"></script>
