--- a/public/index.html
+++ b/public/index.html
@@ -371,8 +371,90 @@
                     </div>
                 </div>
             </section>
+            <section>
+                <div class="videoHome">
+                    <div class="videoAndNote">
+                        <div class="loremNote">
+                            <div class="pNote">
+                                <div class="columnArrow">
+                                    <img src="./asset/image/mark.png" alt="mark">
+                                </div>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Etiam interdum nisl et 
+                                    nunc facilisis, a commodo eros mollis.
+                                    Nunc vel pellentesque est. Curabitur at odio 
+                                    sit amet libero vulputate efficitur ac nec justo.
+                                    Nulla vitae mauris quam. Nulla quam massa, faucibus 
+                                    id pretium ac, mattis eu velit. Donec sed risus
+                                    a lacus fringilla finibus.
+                                </p>
+                            </div>
+                            <div class="picImage">
+                                <div class="picTag">
+                                    <img src="./asset/image/pictag.png" alt="img">
+                                </div>
+                                <ul>
+                                    <li><span>Alabi Qudus</span></li>
+                                    <li><span>Property Owner</span></li>
+                                </ul>
+                            </div>
+                            <div class="dots">
+                                <ul>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="videoTag">
+                            <video width="400" controls poster="./asset/image/cover.jpg" preload="auto">
+                                <source src="./asset/video/htmlin100sec.mp4" type="video/mp4">
+                                <source src="./asset/video/htmlin100sec.ogg" type="video/ogg">
+                            </video>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </article>
     </main>
+    <footer>
+        <section>
+            <div class="homeFooter">
+                <div class="footerHomeImage">
+                    <img src="./asset/image/logo1minimum.png" alt="">
+                </div>
+                <div class="homeSocialMedia">
+                    <div class="homeAddress">
+                        <p><i class="fa-solid fa-location-dot"></i> 14, Tokosi Street, Orile Iganmu, Lagos</p>
+                    </div>
+                    <div class="homePhoneNumber">
+                        <ul>
+                            <li><i class="fa-solid fa-phone"></i>
+                            <a href="tel:+2347081969463">+234-708-196-9463</a>
+                            </li>
+                            <li><i class="fa-solid fa-fax"></i>
+                                <a href="tel:+2347081969463">+234-708-196-9463</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="linkSocialMedia">
+                        <p>Social Media</p>
+                        <ul>
+                            <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-google-plus-g"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
+                            <li><a href="#"><i class="fa-solid fa-wifi"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
     <script src="./asset/js/index.js"></script>
 </body>
 </html>
