--- a/public/index.html
+++ b/public/index.html
@@ -455,7 +455,22 @@
             </div>
         </section>
         <section>
-            
+            <div class="footerBottom">
+                <div class="homeBottom">
+                    <ul>
+                        <li><a href="#">about us</a></li>
+                        <li><a href="#">contact us</a></li>
+                        <li><a href="#">help</a></li>
+                        <li><a href="#">privacy policy</a></li>
+                        <li><a href="#">disclaimer</a></li>
+                    </ul>
+                </div>
+                <div class="homeCopy">
+                    <p>Copyright <i class="fa-regular fa-copyright"></i> <span></span> Minimumlivingcost. All 
+                    rights reserved.
+                    </p>
+                </div>
+            </div>
         </section>
     </footer>
     <script src="./asset/js/index.js"></script>
