--- a/public/index.html
+++ b/public/index.html
@@ -426,15 +426,15 @@
                 </div>
                 <div class="homeSocialMedia">
                     <div class="homeAddress">
-                        <p><i class="fa-solid fa-location-dot"></i> 14, Tokosi Street, Orile Iganmu, Lagos</p>
+                        <p><i class="fa-solid fa-location-dot"></i> 00, Nigeria Street, Nigeria City, Lagos</p>
                     </div>
                     <div class="homePhoneNumber">
                         <ul>
                             <li><i class="fa-solid fa-phone"></i>
-                            <a href="tel:+2347081969463">+234-708-196-9463</a>
+                                <a href="tel:+2341234567890">+234-123-456-7890</a>
                             </li>
                             <li><i class="fa-solid fa-fax"></i>
-                                <a href="tel:+2347081969463">+234-708-196-9463</a>
+                                <a href="tel:+2341234567890">+234-123-456-7890</a>
                             </li>
                         </ul>
                     </div>
